launchpad-buildd (206) UNRELEASED; urgency=medium

  * Fix flake8 violations.
  * Refactor extra status handling to be common to all build types.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 08 Dec 2021 15:42:26 +0000

launchpad-buildd (205) bionic; urgency=medium

  * Ignore NotAutomatic flag for -proposed and -backports (LP: #1016776).
  * Use brz-build-daily-recipe rather than "bzr -Derror dailydeb" if the
    former exists (see LP #1943292).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 03 Dec 2021 23:15:48 +0000

launchpad-buildd (204) bionic; urgency=medium

  * Configure apt to automatically retry downloads on failures
    (LP: #1949473).
  * Configure apt to always include phased updates, even if running in LXD
    containers (LP: #1949769).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 09 Nov 2021 21:50:17 +0000

launchpad-buildd (203) bionic; urgency=medium

  * Remove some more "slave" terminology from tests.
  * Add SNAPPY_STORE_NO_CDN=1 to the environment in more places when using a
    builder proxy (LP: #1945712).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 08 Oct 2021 14:45:06 +0100

launchpad-buildd (202) bionic; urgency=medium

  [ Thomas Bechtold ]
  * Add git_shallow_clone option to vcs_fetch() and use it for OCI build
    (LP: #1939392).

  [ Ioana Lasc ]
  * Gather dpkg.yaml for snap builds.

 -- Ioana Lasc <ioana.lasc@canonical.com>  Tue, 21 Sep 2021 12:46:41 +0300

launchpad-buildd (201) bionic; urgency=medium

  * Sanitize non-user-bound macaroons in build logs.
  * Switch to "charmcraft pack --destructive-mode", now that Charmcraft 1.2
    is in the stable channel.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 01 Sep 2021 18:17:34 +0100

launchpad-buildd (200) bionic; urgency=medium

  * Add core22 to the list of supported core snap names.
  * Rename "snap proxy" to "builder proxy", since it's used for several
    different build types nowadays.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 16 Aug 2021 16:38:32 +0100
